Fixed image to prevent stretching

--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+@media (min-width: 600px) {
+  img {
+    width: 50vh;
+    height: 50vh;
+  }
+}
+
 html {
   background-color: black;
   color: rgb(216, 160, 18);
@@ -21,7 +28,8 @@ a {
 #welcome {
   text-align: center;
   font-family: Raleway, sans-serif;
-  letter-spacing: 4px;
+  letter-spacing: 3px;
+  position: relative;
 }
 
 h1 {
@@ -32,4 +40,5 @@ img {
   width: 20%;
   height: 50%;
   position: absolute;
+  object-fit: cover;
 }
